<resources>
    <string name="app_name">Calculation made easy</string>
    <string name="mode">MODE</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>

    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="equal">=</string>
    <string name="zero">0</string>
    <string name="point">.</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>

    <string name="clear">C</string>
    <string name="open_bracket">(</string>
    <string name="backspace">x</string>
    <string name="close_bracket">)</string>
    <string name="complex">complex Mode</string>

    <string name="power">x<sup><small><small>y</small></small></sup></string>
    <string name="input_text_display">0.0</string>
    <string name="simple_calculator">  simple Mode  </string>
    <string name="Error"> Syntax error</string>

    <string name="sine">sin</string>
    <string name="cosine">cos</string>
    <string name="tangent">tan</string>

    <string name="Ans">Ans</string>
    <string name="percent">%</string>
    <string name="pie">pie</string>
    <string name="imaginary">j</string>

    <string name="polar">pol(</string>
    <string name="rectangular_form">rect(</string>
    <string name="absolute">abs</string>
    <string name="argument">arg</string>
    <string name="conjugate">conj(</string>

    <string name="Modes">Mode</string>
    <string name="comma">,</string>
    <string name="complexMode">Complex Mode</string>
    <string name="variable">var</string>
    <string name="degree">deg</string>
    <string name="Equation">Equation Solver</string>
    <string name="Solution">solve</string>
    <string name="Done">Done</string>

    <string name="letters">abcdefghijklmnopqrstuvwxyz</string>
    <string name="sineInverse">sin<sup><small><small>-1</small></small></sup></string>
    <string name="cosInverse">cos<sup><small><small>-1</small></small></sup></string>
    <string name="tanInverse">tan<sup><small><small>-1</small></small></sup></string>
    <string name="Inverse">inv</string>
    <string name="factorial">!</string>
    <string name="square">x<sup><small><small>2</small></small></sup></string>
    <string name="exponential">e</string>
    <string name="logarithm">ln</string>
    <string name="squareRoot">square root</string>
    <string name="hint">0.0</string>
    <string name="unknown">Unknowns?</string>
    <string name="highestDegree">Highest degree?</string>
    <string name="displayOutput">The value of variables are</string>
    <string name="output">OUTPUT</string>
    <string name="input">INPUT</string>
    <string name="quantity">QUANTITY</string>
    <string name="up_arrow_des">up_arrow</string>
    <string name="down_arrow_des">down_arrow_des</string>

    <string-array name="Menu">
        <item>Simple Mode</item>
        <item>Complex Mode</item>
        <item>Equation Mode</item>
        <item>Converter Mode</item>

    </string-array>

    <string-array name="unitConverterOption">
        <item>Length</item>
        <item>Area</item>
        <item>Number system</item>
        <item>Temperature</item>
        <item>Scientific</item>
        <item>Time</item>
        <item>weight</item>
        <item>Data</item>
        <item>Angle</item>
    </string-array>
    <string-array name="Angle">
        <item>deg</item>
        <item>rad</item>
    </string-array>
    <string-array name="Data">
        <item>b</item>
        <item>kb</item>
        <item>Mb</item>
        <item>Gb</item>
        <item>Tb</item>
        <item>Pb</item>
        <item>Eb</item>
        <item>Zb</item>
        <item>Yb</item>
        <item>B</item>
        <item>kB</item>
        <item>MB</item>
        <item>GB</item>
        <item>TB</item>
        <item>PB</item>
        <item>EB</item>
        <item>ZB</item>
        <item>YB</item>
    </string-array>

    <string-array name="weight">
        <item>kg</item>
        <item>gr</item>
        <item>mg</item>
        <item>dag</item>
        <item>t</item>
    </string-array>

    <string-array name="Time">
        <item>s</item>
        <item>ms</item>
        <item>min</item>
        <item>h</item>
        <item>day</item>
        <item>week</item>
        <item>year</item>
    </string-array>

    <string-array name="lengthOption">
        <item>m</item>
        <item>cm</item>>
        <item>km</item>
        <item>mile</item>
        <item>mm</item>
        <item>ft</item>
        <item>inch</item>
    </string-array>
    <string-array name="Area">
        <item>are</item>
        <item>m<sup>2</sup></item>
        <item>cm<sup>2</sup></item>
        <item>mm<sup>2</sup></item>
        <item>km<sup>2</sup></item>
        <item>ha</item>
        <item>yard</item>
    </string-array>
    <string-array name="temperatureOption">
        <item>Fahrenheit</item>
        <item>Celsius</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="numberSystemConverter">
        <item>Binary</item>
        <item>Decimal</item>
        <item>Octal</item>
        <item>Hexadecimal</item>
    </string-array>
    <string-array name="scientificOption">
        <item>m/s </item>
        <item>km/h</item>
        <item>eV</item>
        <item>keV</item>
        <item>MeV</item>
        <item>GeV</item>
        <item>TeV</item>
    </string-array>



</resources>


<!--<string-array name="Angle">-->
<!--<item>degree</item>-->
<!--<item>radian</item>-->
<!--</string-array>-->

<!--<string-array name="Data">-->
<!--<item>bit</item>-->
<!--<item>kilobyte</item>-->
<!--<item>Megabyte</item>-->
<!--<item>Gigabyte</item>-->
<!--<item>Terabyte</item>-->
<!--<item>Petabyte</item>-->

<!--<item>Bit</item>-->
<!--<item>kiloByte</item>-->
<!--<item>MegaByte</item>-->
<!--<item>GigaByte</item>-->
<!--<item>TeraByte</item>-->
<!--</string-array>-->

<!--<string-array name="weight">-->
<!--<item>kilogram</item>-->
<!--<item>gram</item>-->
<!--<item>miligram</item>-->
<!--<item>dacagram</item>-->
<!--</string-array>-->

<!--<string-array name="Time">-->
<!--<item>second</item>-->
<!--<item>milisecond</item>-->
<!--<item>minute</item>-->
<!--<item>hour</item>-->
<!--<item>day</item>-->
<!--<item>week</item>-->
<!--<item>year</item>-->
<!--</string-array>-->

<!--<string-array name="lengthOption">-->
<!--<item>meter</item>-->
<!--<item>centimeter</item>>-->
<!--<item>kilometer</item>-->
<!--<item>mile</item>-->
<!--<item>milimeter</item>-->
<!--<item>foot</item>-->
<!--<item>inch</item>-->
<!--</string-array>-->

<!--<string-array name="Area">-->
<!--<item>are</item>-->
<!--<item>meter<sup>2</sup></item>-->
<!--<item>centimeter<sup>2</sup></item>-->
<!--<item>milimeter<sup>2</sup></item>-->
<!--<item>kilometer<sup>2</sup></item>-->
<!--<item>hactre</item>-->
<!--<item>yard</item>-->
<!--</string-array>-->
