<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_color"
    tools:context=".ComplexNumberActivity">
    <TableLayout
        android:id="@+id/TableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_max="400dp"
        app:layout_constraintHeight_min="300dp"
        app:layout_constraintVertical_bias="1"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/clearComplex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/red"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
            <Button
                android:id="@+id/openBracketComplex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/open_bracket"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/closeBracketComplex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/close_bracket"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <ImageButton
                android:id="@+id/backspaceComplex"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="@color/green"
                android:contentDescription="@string/backspace"
                android:scaleType="fitCenter"
                android:src="@drawable/backspace"
                app:layout_constraintRight_toRightOf="parent" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/oneComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/twoComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/threeComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/plusComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/fourComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/fiveComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/sixComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/minusComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/sevenComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/eightComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/nineComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/multiplyComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/pointComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/zeroComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/commaComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="7dp"
                android:background="@drawable/circle"
                android:text="@string/comma"
                android:textColor="@color/white"
                android:textSize="30sp" />
            <Button
                android:id="@+id/divideComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="5dp">
            <Button
                android:id="@+id/imaginaryComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:scaleType="fitCenter"
                android:text="@string/imaginary"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="30sp" />
            <Button
                android:id="@+id/polarComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/polar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <Button
                android:id="@+id/rectangularComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/rectangular_form"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <Button
                android:id="@+id/conjugateComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/conjugate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/absoluteComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/absolute"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <Button
                android:id="@+id/argumentComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:text="@string/argument"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <Button
                android:id="@+id/equalComplex"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/circle"
                android:backgroundTint="#4E342E"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>
    <EditText
        android:id="@+id/inputTextComplex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_min="50dp"
        app:layout_constraintHeight_max="120dp"
        android:hint="@string/input_text_display"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:maxLines="2"
        android:layout_margin="10dp"
        android:textSize="36sp"
        android:scrollbars="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerComplex"
        android:labelFor="@id/TableLayout"
        android:autofillHints="true" />
    <Spinner
        android:id="@+id/spinnerComplex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/answerBoxComplex"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:minHeight="30dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintVertical_bias="0.80"
        android:autofillHints="true"
        android:hint="@string/hint"
        android:padding="10dp"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/TableLayout"
        app:layout_constraintTop_toBottomOf="@+id/inputTextComplex"
        tools:layout_editor_absoluteX="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
